# eit-2023-nemo

./: .gitignore  CMakeLists.txt  README.md  algorithms.cpp  algorithms.h  ferry.cpp  ferry.h  fetchVehicleData.cpp  fetchVehicleData.h  filehandler.cpp  filehandler.h  g_main.cpp  g_utility.h  main.cpp  preloadingqueue.cpp  preloadingqueue.h  queue.cpp  queue.h  randomRegistrationNumber.cpp  randomRegistrationNumber.h  utility.h  vehicle.cpp  vehicle.h  yard.cpp  yard.h
libs/implot/: implot.cpp  implot.h
